--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="service-item bg-white text-center mb-2 py-5 px-4">
               <i class="fa fa-2x fa-route mx-auto mb-4"></i>
-              <h5 class="mb-2">Travel Guide</h5>
+              <h5 class="mb-2">Eventos Próximos</h5>
               <p class="m-0">
-                Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-                Amet lorem est amet labore
+                Queres curtir á grande e não sabes como? A gente te ajuda a
+                saber novos eventos por perto de ti, é só escolheres no menu a
+                opção "Eventos Próximos"!
               </p>
             </div>
           </div>
@@ -206,8 +207,9 @@
               <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
               <h5 class="mb-2">Packs baratos</h5>
               <p class="m-0">
-                Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-                Amet lorem est amet labore
+                Muito stress para ti? Não te preocupes, oferecemos os melhores
+                packs para tu descontraíres e ainda por cima pelo preço mais
+                barato! Incrível não é?
               </p>
             </div>
           </div>
@@ -216,8 +218,9 @@
               <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
               <h5 class="mb-2">Reserva de Hóteis fácil</h5>
               <p class="m-0">
-                Justo sit justo eos amet tempor amet clita amet ipsum eos elitr.
-                Amet lorem est amet labore
+                Ok, essas cenas são bué chatas!!! Deixa que a gente cuide disso
+                para ti, basta só teres o cartão de crédito associado á conta e
+                escolheres os dias!
               </p>
             </div>
           </div>
