--- a/navbar.html
+++ b/navbar.html
@@ -33,7 +33,7 @@
     <nav
       class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5"
     >
-      <a href="" class="navbar-brand">
+      <a href="/" class="navbar-brand">
         <h1 class="m-0 text-primary">
           <span class="text-dark">IMPÉRIO</span> TURISMO
         </h1>
@@ -51,7 +51,7 @@
         id="navbarCollapse"
       >
         <div class="navbar-nav ml-auto py-0">
-          <a href="index.html" class="nav-item nav-link">Início</a>
+          <a href="/" class="nav-item nav-link">Início</a>
           <a href="blog.html" class="nav-item nav-link">Blog</a>
           <a href="service.html" class="nav-item nav-link">Hóteis</a>
           <a href="package.html" class="nav-item nav-link">Packs Império Turismo</a>
