--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,7 @@
 <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
     <div class="row pt-5">
         <div class="col-lg-3 col-md-6 mb-5">
-            <a href="" class="navbar-brand">
-                <h1 class="text-primary">TURISMO</h1>
-            </a>
+            <img src="/img/favicon.ico" width="50%" />
             <p>A Império Turismo vem com o objetivo de facilitar a tua vida quanto a coisas com turismo evitando altos custos também, deixa tudo connosco que nós tratamos do resto!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
