--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="service-item bg-white text-center mb-2 py-5 px-4">
-              <i class="fa fa-2x fa-route mx-auto mb-4"></i>
+              <img src="/img/imperio_turismo_emoji_eventos_proximos.png" width="128px" class="mx-auto mb-4">
               <h5 class="mb-2">Eventos Próximos</h5>
               <p class="m-0">
                 Queres curtir á grande e não sabes como? A gente te ajuda a
@@ -204,7 +204,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="service-item bg-white text-center mb-2 py-5 px-4">
-              <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
+              <img src="/img/imperio_turismo_emoji_cartas.png" width="128px" class="mx-auto mb-4">
               <h5 class="mb-2">Packs baratos</h5>
               <p class="m-0">
                 Muito stress para ti? Não te preocupes, oferecemos os melhores
@@ -215,7 +215,7 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="service-item bg-white text-center mb-2 py-5 px-4">
-              <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
+              <img src="/img/imperio_turismo_emoji_hotel.png" width="128px" class="mx-auto mb-4">
               <h5 class="mb-2">Reserva de Hóteis fácil</h5>
               <p class="m-0">
                 Ok, essas cenas são bué chatas!!! Deixa que a gente cuide disso
@@ -297,7 +297,7 @@
                     <h6 class="m-0">
                       <i class="fa fa-star text-primary mr-2"></i>5.0
                     </h6>
-                    <h5 class="m-0">€350</h5>
+                    <h5 class="m-0">€200</h5>
                   </div>
                 </div>
               </div>
@@ -329,7 +329,7 @@
                     <h6 class="m-0">
                       <i class="fa fa-star text-primary mr-2"></i>4.5
                     </h6>
-                    <h5 class="m-0">€350</h5>
+                    <h5 class="m-0">€30</h5>
                   </div>
                 </div>
               </div>
@@ -361,7 +361,7 @@
                     <h6 class="m-0">
                       <i class="fa fa-star text-primary mr-2"></i>4.9
                     </h6>
-                    <h5 class="m-0">€350</h5>
+                    <h5 class="m-0">€100</h5>
                   </div>
                 </div>
               </div>
@@ -393,7 +393,7 @@
                     <h6 class="m-0">
                       <i class="fa fa-star text-primary mr-2"></i>4.7
                     </h6>
-                    <h5 class="m-0">€350</h5>
+                    <h5 class="m-0">€50</h5>
                   </div>
                 </div>
               </div>
@@ -425,7 +425,7 @@
                     <h6 class="m-0">
                       <i class="fa fa-star text-primary mr-2"></i>4.5
                     </h6>
-                    <h5 class="m-0">€350</h5>
+                    <h5 class="m-0">€160</h5>
                   </div>
                 </div>
               </div>
@@ -528,7 +528,7 @@
                     >Turismo em Portugal</a
                   >
                 </div>
-                <a class="h5 m-0 text-decoration-none" href=""
+                <a class="h5 m-0 text-decoration-none" href="single.html"
                   >O plano perfeito para turismo em Portugal!</a
                 >
               </div>
