--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Serviços</h5>
             <div class="d-flex flex-column justify-content-start">
                 <a class="text-white-50 mb-2" href="package.html"><i class="fa fa-angle-right mr-2"></i>Packs</a>
-                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Hóteis</a>
+                <a class="text-white-50 mb-2" href="hotels.html"><i class="fa fa-angle-right mr-2"></i>Hóteis</a>
                 <a class="text-white-50" href="events.html"><i class="fa fa-angle-right mr-2"></i>Eventos Próximos</a>
             </div>
         </div>
