--- a/navbar.html
+++ b/navbar.html
@@ -54,7 +54,7 @@
         <div class="navbar-nav ml-auto py-0">
           <a href="/" class="nav-item nav-link">Início</a>
           <a href="blog.html" class="nav-item nav-link">Blog</a>
-          <a href="service.html" class="nav-item nav-link">Hóteis</a>
+          <a href="hotels.html" class="nav-item nav-link">Hóteis</a>
           <a href="package.html" class="nav-item nav-link">Packs Império Turismo</a>
           <a href="events.html" class="nav-item nav-link">Eventos Próximos</a>
         </div>
