--- a/single.html
+++ b/single.html
@@ -197,25 +197,114 @@
                   width="100%"
                   class="mx-auto mb-4"
                 />
-                <h3 class="mb-3">Universidade de Coimbra, Coimbra</h3>
+                <h3 class="mb-3">Passeio de Barco no Rio Douro, Porto</h3>
                 <p>
-                  A mais antiga universidade do país fica situada na cidade de
-                  Coimbra, sem duvidas é um lugar que tu tens que visitar. O
-                  Paço das Escolas, onde fica o edifício histórico da
-                  Universidade é simplesmente de tirar o fôlego.
+                  Se estás visitando a cidade do Porto, reserve um dia para
+                  fazer um passeio de barco no Rio Douro. Sempre tem várias
+                  empresas oferecendo esse cruzeiro, em qualquer época do ano.
                 </p>
                 <p>
-                  Não deixe de visitar também a biblioteca joanina. Tente
-                  visitar durante a semana, para ver o movimento animado, já que
-                  esta é uma cidade de estudantes.
+                  Geralmente partem da zona Ribeirinha da cidade e terminam em
+                  Régua, uma vila encantadora localizada nas margens do Douro.
                 </p>
                 <p>
-                  Aproveite para experimentar um leitão assado no forno, um dos
-                  pratos típicos da região, ou jante no magnífico Hotel da
-                  Quinta das Lágrimas.
+                  O passeio percorre paisagens incríveis, repletas de vinícolas
+                  das melhores quintas de vinho do Porto. Então claro, não deixe
+                  de fazer uma prova de vinhos, já que você estará no coração
+                  desse maravilhoso néctar Português.
+                </p>
+                <p>
+                  Nossa sugestão é visitar a emblemática Quinta das Carvalhas ou
+                  a Quinta do Vallado, para uma experiência autêntica e
+                  inesquecível. Algumas casas têm também a opção de participar
+                  da vindima, que ocorre durante o mês de Setembro. Já imaginou,
+                  colher e pisar a uva para depois fazer o próprio vinho?
                 </p>
                 <img
-                  src="/img/universidade-de-coimbra.jpg"
+                  src="/img/Vila_Nova_de_Foz_Coa_rio_Douro_14282784962.jpg"
+                  width="100%"
+                  class="mx-auto mb-4"
+                />
+                <h3 class="mb-3">Palácio da Bolsa, Cidade do Porto</h3>
+                <p>
+                  Um dos pontos turísticos de Portugal mais visitados é o
+                  magnífico Palácio da Bolsa. Aqui é onde se localiza a Sede da
+                  Associação Comercial do Porto e durante a sua construção, em
+                  1842, os comerciantes foram obrigados a negociar ao ar livre.
+                </p>
+                <p>
+                  O ingresso inclui a visita guiada, que percorre uma sala mais
+                  incrível do que a outra, numa verdadeira viagem no tempo. É
+                  também aqui que são recebidos os chefes-de-estado que visitam
+                  a cidade, no impressionante Salão Árabe.
+                </p>
+                <img
+                  src="/img/palácio_da_bolsa.jpg"
+                  width="100%"
+                  class="mx-auto mb-4"
+                />
+                <h3 class="mb-3">Ponte Dom Luís I, Porto</h3>
+                <p>
+                  É do alto da Ponte D. Luís I que você terá a melhor vista da
+                  cidade e do Rio Douro. A famosa ponte de estrutura metálica,
+                  foi projetada por um discípulo de Gustav Eiffel e permite a
+                  passagem de pessoas, carros e metrô.
+                </p>
+                <p>
+                  Termine seu passeio subindo o Mosteiro da Serra do Pilar, de
+                  onde você terá uma maravilhosa vista para a Foz do Douro e
+                  para o sol se pondo no mar. A ponte é um dos principais pontos
+                  turisticos de Portugal.
+                </p>
+                <img
+                  src="/img/16339ba77bf3814311c99bd4f8061aa9-ponte-de-dom-luis-i.jpg"
+                  width="100%"
+                  class="mx-auto mb-4"
+                />
+                <h3 class="mb-3">Praia da Ponta da Piedade, Algarve</h3>
+                <p>
+                  Outras das maravilhas de Portugal são as praias. É
+                  impressionante como um território desse tamanho tem tanta
+                  diversidade. Tem praia de areia branca fininha, outras com as
+                  melhores ondas no mundo para surfar.
+                </p>
+                <p>
+                  A região do Algarve é perfeita para conhecer as praias
+                  magníficas de Portugal e é um dos lugares mais lotados no
+                  verão daqui. Vale a pena ir até a cidade de Lagos e fazer o
+                  passeio de barco até à Ponta da Piedade, uma das mais bonitas
+                  praias do país.
+                </p>
+                <img
+                  src="/img/Praia-do-Camilo-206.jpg"
+                  width="100%"
+                  class="mx-auto mb-4"
+                />
+                <h3 class="mb-3">Ilha da Madeira</h3>
+                <p>
+                  A Ilha da Madeira é montanhosa, repleta de trilhas pelo meio
+                  da natureza, chamadas de “levadas”. Vale a pena subir até o
+                  Pico Ruivo de carro, terceira montanha mais alta do país, e
+                  caminhar os três últimos quilômetros que levam até o topo.
+                </p>
+                <p>
+                  De lá você vai ter uma vista incrível sobre Porto Santo e um
+                  pôr do sol inesquecível, caso o tempo não esteja nublado
+                  claro.
+                </p>
+                <p>
+                  Existem outras experiências típicas na ilha, umas mais
+                  emocionantes do que outras. Se tu topas o desafio de entrar
+                  num carrinho de verga artesanal e ser empurrado ladeira
+                  abaixo, então pode se considerar um verdadeiro Madeirense.
+                </p>
+                <p>
+                  As pessoas preferem outro tipo de experiência, como por
+                  exemplo provar a deliciosa espetada Madeirense, terminando com
+                  o famoso vinho da Madeira.
+                </p>
+                <img
+                  src="/img/madeira-portugal-marina-da-quinta-grande-shutterstock-522001627.jpg"
                   width="100%"
                   class="mx-auto mb-4"
                 />
@@ -225,63 +314,26 @@
 
             <!-- Comment List Start -->
             <div class="bg-white" style="padding: 30px; margin-bottom: 30px">
-              <h4 class="text-uppercase mb-4" style="letter-spacing: 5px">
-                1 Comentário
-              </h4>
-              <div class="media mb-4">
-                <img
-                  src="img/team-2.png"
-                  alt="Image"
-                  class="img-fluid mr-3 mt-1 rounded-circle"
-                  style="width: 45px"
-                />
-                <div class="media-body">
-                  <h6>
-                    <a href="">Bruno Ramos</a> <small><i>20 Out 2022</i></small>
-                  </h6>
-                  <p>Já fui a todos esses sítios e amei!! 😏</p>
-                  <button class="btn btn-sm btn-outline-primary">
-                    Responder
-                  </button>
-                </div>
-              </div>
-            </div>
-            <!-- Comment List End -->
-
-            <!-- Comment Form Start -->
-            <div class="bg-white mb-3" style="padding: 30px">
-              <h4 class="text-uppercase mb-4" style="letter-spacing: 5px">
-                Deixe um comentário
-              </h4>
-              <form>
-                <div class="form-group">
-                  <label for="name">Nome *</label>
-                  <input type="text" class="form-control" id="name" />
-                </div>
-                <div class="form-group">
-                  <label for="email">Email *</label>
-                  <input type="email" class="form-control" id="email" />
-                </div>
-
-                <div class="form-group">
-                  <label for="message">Mensagem *</label>
-                  <textarea
-                    id="message"
-                    cols="30"
-                    rows="5"
-                    class="form-control"
-                  ></textarea>
-                </div>
-                <div class="form-group mb-0">
-                  <input
-                    type="submit"
-                    value="Deixe um comentário"
-                    class="btn btn-primary font-weight-semi-bold py-2 px-3"
-                  />
-                </div>
-              </form>
-            </div>
-            <!-- Comment Form End -->
+                <div id="disqus_thread"></div>
+                <script>
+                    /**
+                    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                    /*
+                    var disqus_config = function () {
+                    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                    };
+                    */
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://turismo-10.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          </div>
           </div>
 
           <div class="col-lg-4 mt-5 mt-lg-0">
