--- a/single.html
+++ b/single.html
@@ -100,7 +100,7 @@
                   edifício de arquitetura moderna junto do Rio Tejo.
                 </p>
                 <img
-                  src="/img/TORREDEBELEM.webp"
+                  src="/img/TORREDEBELEM.jpg"
                   width="100%"
                   class="mx-auto mb-4"
                 />
@@ -128,7 +128,7 @@
                   fazer por lá, é um passeio de barco para ver as baleias e
                   golfinhos.
                 </p>
-                <img src="/img/acores.png" width="100%" class="mx-auto mb-4" />
+                <img src="/img/acores.jpg" width="100%" class="mx-auto mb-4" />
                 <h3 class="mb-3">Palácio Nacional de Mafra, Lisboa</h3>
                 <p>
                   Um dos principais pontos turísticos de Portugal é o Palácio
